2004-03-31  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* configure.in: Change version to 'current' (timidity:3161)

2004-03-29  URABE Shyouhei <shyouhei@ice.uec.ac.jp>

	* Makefile.am (EXTRA_DIST): Add entry for ChangeLog.2
	* configure.in: Change version to 'development'
	* ChangeLog.2: Add
	* ChangeLog : Wipe

For the changes before 2.13.0, see ChangeLog.2